# alquiler-vehiculos/api/openapi.yaml
@@ -4,6 +4,9 @@ info:
   version: 1.0.0
 servers:
   - url: http://localhost:3000/api
+security:
+  - bearerAuth: []
+
 tags:
   - name: Vehiculos
   - name: Reservas
@@ -17,13 +20,13 @@ paths:
           name: estado
           schema: { type: string, enum: [disponible, mantenimiento, bloqueado] }
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
               schema:
                 type: array
-                items: { $ref: '#/components/schemas/Vehiculo' }
+                items: { $ref: "#/components/schemas/Vehiculo" }
     post:
       tags: [Vehiculos]
       summary: Crear vehículo
@@ -31,13 +34,13 @@ paths:
         required: true
         content:
           application/json:
-            schema: { $ref: '#/components/schemas/VehiculoCreate' }
+            schema: { $ref: "#/components/schemas/VehiculoCreate" }
       responses:
-        '201':
+        "201":
           description: Creado
           content:
             application/json:
-              schema: { $ref: '#/components/schemas/Vehiculo' }
+              schema: { $ref: "#/components/schemas/Vehiculo" }
   /reservas:
     post:
       tags: [Reservas]
@@ -46,13 +49,13 @@ paths:
         required: true
         content:
           application/json:
-            schema: { $ref: '#/components/schemas/ReservaCreate' }
+            schema: { $ref: "#/components/schemas/ReservaCreate" }
       responses:
-        '201':
+        "201":
           description: Creado
           content:
             application/json:
-              schema: { $ref: '#/components/schemas/Reserva' }
+              schema: { $ref: "#/components/schemas/Reserva" }
   /reservas/{id}/confirmar:
     post:
       tags: [Reservas]
@@ -63,7 +66,7 @@ paths:
           required: true
           schema: { type: string, format: uuid }
       responses:
-        '202':
+        "202":
           description: Aceptado (flujo asincrónico disparado)
           content:
             application/json:
@@ -82,12 +85,17 @@ paths:
           required: true
           schema: { type: string, format: uuid }
       responses:
-        '200':
+        "200":
           description: OK
           content:
             application/json:
-              schema: { $ref: '#/components/schemas/Reserva' }
+              schema: { $ref: "#/components/schemas/Reserva" }
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     Vehiculo:
       type: object
@@ -114,7 +122,18 @@ components:
         clienteId: { type: string, format: uuid }
         desde: { type: string, format: date-time }
         hasta: { type: string, format: date-time }
-        estado: { type: string, enum: [pendiente, verificacion_pendiente, confirmada, rechazada, cancelada] }
+        estado:
+          {
+            type: string,
+            enum:
+              [
+                pendiente,
+                verificacion_pendiente,
+                confirmada,
+                rechazada,
+                cancelada,
+              ],
+          }
         contratoUrl: { type: string, nullable: true }
     ReservaCreate:
       type: object
